SERVER-13039 handle subnodes which require an index during plan enumeration